--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,12 @@
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.12.0",
+    "@mui/x-date-pickers-pro": "^8.12.0",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
