--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.64.0",
     "react-router-dom": "^7.9.3",
     "react-toastify": "^11.0.5",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
